[package]
name = "moneysaver"
version = "0.1.0"
authors = ["nownabe <nownabe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
env_logger = "0.8"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
actix-rt = "1"
